<resources>
    <string name="app_name">Translate</string>
    <string name="ru">Русский</string>
    <string name="en">Английский</string>
    <string name="ru_short">ru</string>
    <string name="en_short">en</string>
    <string name="reverse_translation">Обратный перевод</string>
    <string name="enter_text">Введите текст</string>
    <string name="history">История</string>
    <string name="not_load_translation">Не удалось загрузить перевод</string>
    <string name="start_translate">Начать перевод</string>
</resources>
