<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".translate.TranslateActivity">

    <TextView
        android:id="@+id/tvTextLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ru"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ibReverseTranslation"
        app:layout_constraintEnd_toStartOf="@+id/ibReverseTranslation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ibReverseTranslation" />

    <ImageButton
        android:id="@+id/ibReverseTranslation"
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/reverse_translation"
        android:src="@drawable/ic_swap_language_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTranslationLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/en"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ibReverseTranslation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ibReverseTranslation"
        app:layout_constraintTop_toTopOf="@+id/ibReverseTranslation" />

    <EditText
        android:id="@+id/etTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_text"
        android:inputType="textMultiLine"
        android:lines="3"
        app:layout_constraintEnd_toStartOf="@+id/bStartTranslation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibReverseTranslation" />

    <TextView
        android:id="@+id/tvTranslationOutput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:lines="3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTextInput" />

    <ImageButton
        android:id="@+id/bStartTranslation"
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/start_translate"
        android:src="@drawable/ic_send_24dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/etTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etTextInput"
        app:layout_constraintTop_toTopOf="@+id/etTextInput" />

    <ProgressBar
        android:id="@+id/pbSend"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/etTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etTextInput"
        app:layout_constraintTop_toTopOf="@+id/etTextInput" />

</androidx.constraintlayout.widget.ConstraintLayout>